# Q-LMPC-FL

Laboratorio/Updating strategies/: Q_LMPC_simplified_revised.py  Q_LMPC_with_Fuzzy.py  Q_LMPC_with_Fuzzy1.py  Q_LMPC_with_FuzzyNN.py
Laboratorio/Updating strategies/Data/: critic_norm.npy
Laboratorio/Updating strategies/Training/Actor/: actor_vasco
Laboratorio/Updating strategies/Training/Critic/: critic_vasco
Laboratorio/Updating strategies/Training/Fuzzy/: fuzzy_NN_parameters.pth  fuzzy_NN_parameters_high.pth  fuzzy_samples.csv  fuzzy_samples_high.csv
franka_ros/franka_example_controllers/: CMakeLists.txt
franka_ros/franka_example_controllers/include/franka_example_controllers/: cartesian_impedance_example_controller.h
franka_ros/franka_example_controllers/scripts/: PBO_index_pub.py  Q_LMPC_Fuzzy.py  cosine_wrench.py  fuzzy_controller_test.py  stair_wrench.py
franka_ros/franka_example_controllers/src/: cartesian_impedance_example_controller.cpp
franka_ros/franka_msgs/: CMakeLists.txt  package.xml
